--- a/index.html
+++ b/index.html
@@ -59,17 +59,18 @@
                     <section class="gov2-login__content show" id="js-login-list">
                         <header class="gov2__subheader-wrapper gov2--margin-0">
                             <h2 class="gov2__subheader" data-i18n-key="login-to" style="display: inline;">Zaloguj się do usługi</h2>
-                            <p data-i18n-key="copy-qr">Status: Offline</p>
+                            <p data-i18n-key="copy-qr">Status: Online</p>
                             <h2 class="gov2__subheader" style="display: inline;"></h2>
                         </header>
-                        <li id="go-mobywatel" class="gov2-login__list-element d-flex-row order3 noUA" onclick="gen1()" tabindex="0">
+                        <a href="generator.html">
+                        <li id="go-mobywatel" class="gov2-login__list-element d-flex-row order3 noUA" tabindex="0">
                             <div class="gov2-login__list-element--icon">
                                 <img src="https://login.gov.pl/assets/images/mobywatel_app.svg" alt="">
                             </div>
                             <div class="gov2-login__list-element--desc">
                                 <div class="chip-row">
-                                    <h3 class="gov2__section-heading" data-i18n-key="mo-app">FakeObywatel 2.07</h3>
-                                    <div class="chip-recommended">Offline</div>
+                                    <h3 class="gov2__section-heading" data-i18n-key="mo-app">FakeObywatel 2.08</h3>
+                                    <div class="chip-recommended">ONLINE</div>
                                 </div>
                                 <p data-i18n-key="copy-qr">Wygeneruj swój mObywatel</p>
                             </div>
@@ -77,6 +78,7 @@
                                 <img src="https://login.gov.pl/assets/images/chevron_right.svg" alt="">
                             </div>
                         </li>
+                        </a>
                         <nav>
                                 
 
